# FlexEval

./: .gitignore  README.md  pyproject.toml
docs/: upstream_provenance.md
docs/source/: index.rst
docs/source/overview/: installation.rst  usage.rst
env/: constraints-linux-py311.txt  hf_token.py  requirements-backend-euroeval.txt  requirements-backend-olmes.txt  requirements-engine-vllm.txt  setup_common.sh  setup_dev_env.sh  setup_runtime_env.sh
src/flex_eval/: README.md
src/flex_eval/src/flexeval/: __init__.py  run.py
src/flex_eval/src/flexeval/analysis/: __init__.py  base.py
src/flex_eval/src/flexeval/architectures/: __init__.py  base.py  flex_family.py  generic.py  registry.py
src/flex_eval/src/flexeval/backends/: __init__.py  base.py  euroeval_backend.py  olmes_backend.py  registry.py
src/flex_eval/src/flexeval/capture/: __init__.py  base.py
src/flex_eval/src/flexeval/cli/: __init__.py  run.py
src/flex_eval/src/flexeval/engines/: __init__.py  base.py  registry.py  transformers_engine.py  vllm_engine.py
src/flex_eval/src/flexeval/schemas/: __init__.py  artifacts.py  config.py  example.py  results.py
src/flex_eval/src/flexolmo_analysis/: __init__.py
src/flex_eval/src/flexolmo_analysis/cli/: __init__.py  run_capture.py  run_reports.py
src/flex_eval/src/flexolmo_analysis/configs/: expert_contribution_pair.json  latent_space_pair.json  router_direction_pair.json  routing_light_pair.json  token_features_pair.json  weight_analysis_pair.json
src/flex_eval/src/flexolmo_analysis/scripts/: README.md  (+7 more)
tests/core/: test_token_features.py
(+70 files in other folders)
